--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/microsoft/TypeScript/issues"
   },
-  "main": "./lib/typescript.js",
+  "main": "node_modules/expo/AppEntry.js",
   "typings": "./lib/typescript.d.ts",
   "bin": {
     "tsc": "./bin/tsc",
@@ -34,6 +34,7 @@
     "!**/.gitattributes"
   ],
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@dprint/formatter": "^0.4.1",
     "@dprint/typescript": "0.93.0",
     "@esfx/canceltoken": "^1.0.0",
@@ -45,6 +46,7 @@
     "@types/mocha": "^10.0.8",
     "@types/ms": "^0.7.34",
     "@types/node": "latest",
+    "@types/react": "~18.2.45",
     "@types/source-map-support": "^0.5.10",
     "@types/which": "^3.0.4",
     "@typescript-eslint/rule-tester": "^8.8.0",
@@ -75,7 +77,7 @@
     "playwright": "^1.47.2",
     "source-map-support": "^0.5.21",
     "tslib": "^2.7.0",
-    "typescript": "^5.6.2",
+    "typescript": "^5.1.3",
     "typescript-eslint": "^8.8.0",
     "which": "^3.0.1"
   },
@@ -94,7 +96,11 @@
     "lint": "hereby lint",
     "knip": "hereby knip",
     "format": "dprint fmt",
-    "setup-hooks": "node scripts/link-hooks.mjs"
+    "setup-hooks": "node scripts/link-hooks.mjs",
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "browser": {
     "fs": false,
@@ -112,5 +118,12 @@
     "npm": "8.19.4"
   },
   "gitHead": "a5e123d9e0690fcea92878ea8a0a382922009fc9",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "expo": "~50.0.4",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-safe-area-context": "4.8.2"
+  }
 }
